@@ -2,6 +2,7 @@ Revision history for Playwright
 
 0.008 2021-07-19 TEODESIAN
     - Add parent attribute to grab element parents when needed
+    - Remove dependency on AsyncData in favor of File::Temp, Sereal and fork().
 
 0.007 2021-06-17 TEODESIAN
     - Adjust module for changing Download returns, and api.json no longer being shipped with Playwright
